add: class utils update: split input manager into mouse and keyboard add: mouse pointer support add: new collision and tooltip system add: vector2 and vector3 class support update: code to use vectors update: project structure fix: collider calc functions

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,9 +14,21 @@ body {
     height: 100vh;
 }
 
+#game {
+    border: 1px solid #333;
+}
+
 canvas {
     display: block;
     margin: 0 auto;
     background: #f2f2f2;
-    border: 1px solid #333;
+}
+
+image, canvas {
+    user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-drag: none;
 }
